--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,4 +1,33 @@
 pt-BR:
+  users:
+    confirmations:
+      success: 'Email confirmado com sucesso, obrigado!'
+    new:
+      title: Cadastro
+    edit:
+      title: Editar Perfil
+    show:
+      title: "Perfil: %{user_name}"
+      edit: 'Editar perfil'
+      location: "Localização: %{location}"
+      bio: "Bio: %{bio}"
+  links:
+    back: Voltar
+  layout:
+    rooms: Quartos
+    signup: Cadastro
+  general:
+    form_error: 'Há erros no formulário, por favor verifique.'
+  signup_mailer:
+    confirm_email:
+      subject: 'Colcho.net - Por favor, verifique seu email'
+      title: 'Seja bem vindo ao Colcho.net!'
+      body: |
+            Seja bem vindo ao Colcho.net, %{full_name}.
+            O Colcho.net é o lugar ideal para você alugar aquele quarto
+            sobrando na sua casa e ainda conhecer gente do mundo inteiro.
+      confirm_link_html: 'Para você começar a usar o site, acesse o link: %{link}'
+      thanks_html: 'Obrigado por se cadastrar no %{link}.'
   date:
     abbr_day_names:
     - Dom
